--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -37,6 +37,16 @@
         <service
             android:name="org.chromium.customtabsclient.KeepAliveService"
             android:exported="true"/>
+
+        <activity android:name="org.chromium.customtabsclient.Customlink">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="com.googleusercontent.apps.581786658708-6p376uvvj9v1nndcljh2a0o0apss8n5c" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
