--- a/customtabs/build.gradle
+++ b/customtabs/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'android-library'
-
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
+    signingConfigs {
+    }
+    compileSdkVersion 23
+    buildToolsVersion '23.0.0'
     sourceSets {
         main.manifest.srcFile 'AndroidManifest.xml'
         main.java.srcDirs = ['java']
@@ -12,9 +12,11 @@ android {
         main.assets.srcDir 'assets'
         main.resources.srcDir 'resources'
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+}
+
+dependencies {
 }
